--- a/src/app/components/champion/add-champion-section/add-champion-section.html
+++ b/src/app/components/champion/add-champion-section/add-champion-section.html
@@ -7,26 +7,35 @@
       <form (ngSubmit)="addChampion()" #championForm="ngForm">
         <div class="mb-3">
           <label for="championName" class="form-label">Champion Name</label>
-          <select
-            id="championName"
-            class="form-select"
-            [(ngModel)]="championName"
-            name="championName"
-            required
-            [disabled]="isLoading || availableChampions.length === 0">
-
-            <option value="" disabled>
+          <mat-form-field class="w-100">
+            <mat-label>
               @if (availableChampions.length === 0) {
                 Loading champions...
               } @else {
                 Select a champion
               }
-            </option>
-
-            @for (championName of availableChampions; track championName) {
-              <option [value]="championName.name">{{ championName.name }}</option>
-            }
-          </select>
+            </mat-label>
+            <input
+              matInput
+              id="championName"
+              [(ngModel)]="championName"
+              name="championName"
+              required
+              [matAutocomplete]="championAuto"
+              [disabled]="isLoading || availableChampions.length === 0"
+              placeholder="Type to search champions...">
+            <mat-autocomplete
+              #championAuto="matAutocomplete"
+              [displayWith]="displayChampionName"
+              autoActiveFirstOption
+            >
+              @for (champion of filteredChampions | async; track champion.name) {
+                <mat-option [value]="champion">
+                  {{ champion.name }}
+                </mat-option>
+              }
+            </mat-autocomplete>
+          </mat-form-field>
 
           @if (availableChampions.length === 0) {
             <small class="form-text text-muted">
