--- a/src/app/components/sidenav/sidenav.html
+++ b/src/app/components/sidenav/sidenav.html
@@ -5,4 +5,9 @@
   </div>
 }
 
-<app-login />
+<div class="nav-bar-end">
+  <!-- Admin Controls -->
+  <app-admin-section />
+
+  <app-login />
+</div>
