--- a/src/app/components/voting/voting-section/voting-section.html
+++ b/src/app/components/voting/voting-section/voting-section.html
@@ -1,3 +1,5 @@
+<h2 style="text-wrap: balance">League of Legends Champion Voting</h2>
+
 @if (champions$ | async; as champions) {
   <div class="card mt-4">
     <div class="card-header">
