Reverse column direction and remove gap in voting wrapper for better mobile responsiveness

--- a/src/app/pages/voting/voting.scss
+++ b/src/app/pages/voting/voting.scss
@@ -16,7 +16,8 @@
 
 @media screen and (width < 800px) {
   .main-voting-wrapper {
-    flex-direction: column;
+    flex-direction: column-reverse;
+    gap: 0;
   }
 
   .controls {
