--- a/src/app/components/champion/add-champion-section/add-champion-section.html
+++ b/src/app/components/champion/add-champion-section/add-champion-section.html
@@ -1,46 +1,44 @@
 @if (user$ | async) {
   <form (ngSubmit)="addChampion()" #championForm="ngForm">
-    <div class="d-flex flex-column">
-      <mat-form-field class="w-100">
-        <mat-label>
-          Add new champion
-        </mat-label>
-        <input
-          matInput
-          id="championName"
-          [formControl]="championControl"
-          required
-          [matAutocomplete]="championAuto"
-          placeholder="Champion name"
-          (input)="onInputChange($event)">
-        <mat-autocomplete
-          #championAuto="matAutocomplete"
-          [displayWith]="displayChampionName"
-          autoActiveFirstOption
-          requireSelection
-        >
-          @for (champion of filteredChampions | async; track champion.name) {
-            <mat-option [value]="champion">
-              {{ champion.name }}
-            </mat-option>
-          }
-        </mat-autocomplete>
-      </mat-form-field>
-      <button
-        type="submit"
-        class="btn btn-primary"
-        [disabled]="isLoading || !championControl.value || availableChampions.length === 0">
-        @if (isLoading) {
-          <span class="spinner-border spinner-border-sm me-2" role="status">
+    <mat-form-field class="w-100">
+      <mat-label>
+        Add new champion
+      </mat-label>
+      <input
+        matInput
+        id="championName"
+        [formControl]="championControl"
+        required
+        [matAutocomplete]="championAuto"
+        placeholder="Champion name"
+        (input)="onInputChange($event)">
+      <mat-autocomplete
+        #championAuto="matAutocomplete"
+        [displayWith]="displayChampionName"
+        autoActiveFirstOption
+        requireSelection
+      >
+        @for (champion of filteredChampions | async; track champion.name) {
+          <mat-option [value]="champion">
+            {{ champion.name }}
+          </mat-option>
+        }
+      </mat-autocomplete>
+    </mat-form-field>
+    <button
+      matButton="filled"
+      type="submit"
+      [disabled]="isLoading || !championControl.value || availableChampions.length === 0">
+      @if (isLoading) {
+        <span class="spinner-border spinner-border-sm me-2" role="status">
               <span class="visually-hidden">Loading...</span>
             </span>
-        }
-        {{
-          isLoading
-          ? 'Adding...'
-          : 'Add Champion'
-        }}
-      </button>
-    </div>
+      }
+      {{
+        isLoading
+        ? 'Adding...'
+        : 'Add Champion'
+      }}
+    </button>
   </form>
 }
