--- a/src/app/components/voting/voting-statistics/voting-statistics.html
+++ b/src/app/components/voting/voting-statistics/voting-statistics.html
@@ -1,4 +1,4 @@
-<div class="mt-4 p-3 bg-light rounded">
+<div class="mt-4 p-3 rounded">
   <h6>Voting Statistics</h6>
   <div class="row text-center">
     <div class="col">
