--- a/src/app/pages/voting/voting.scss
+++ b/src/app/pages/voting/voting.scss
@@ -28,10 +28,6 @@
     padding: 4px 8px;
     margin-bottom: 8px;
     background-color: var(--mat-sys-surface);
-    box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px,
-    rgba(0, 0, 0, 0.12) 0 -12px 30px,
-    rgba(0, 0, 0, 0.12) 0 4px 6px,
-    rgba(0, 0, 0, 0.17) 0 12px 13px,
-    rgba(0, 0, 0, 0.09) 0 -3px 5px;
+    box-shadow: var(--mat-sys-level3);
   }
 }
