--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ html {
     density: 0,
   ));
 
-  color-scheme: light;
+  color-scheme: dark;
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
@@ -25,6 +25,8 @@ html, body {
 }
 
 body {
+  background-color: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   overflow: hidden;
