--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ html {
     density: 0,
   ));
 
-  color-scheme: dark;
+  color-scheme: light dark;
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
