--- a/src/app/components/voting/voting-section/voting-section.html
+++ b/src/app/components/voting/voting-section/voting-section.html
@@ -1,10 +1,9 @@
-<h2 style="text-wrap: balance">League of Legends Champion Voting</h2>
+<h3 style="text-wrap: balance">League of Legends Champion Voting</h3>
 
 @if (champions$ | async; as champions) {
   <div class="mt-4">
     <div>
-      <h4>Vote for Champions ({{ champions.length }} available)</h4>
-      <p class="mb-0">You can vote once per champion. Click vote again to remove your vote.</p>
+      <p>You can vote once per champion. Click vote again to remove your vote.</p>
     </div>
     <div>
       <div class="row">
