--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 html {
   @include mat.theme((
     color: (
-      primary: mat.$cyan-palette,
+      primary: mat.$azure-palette,
       tertiary: mat.$orange-palette,
     ),
     typography: Roboto,
